--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <title>contentful-portfolio</title>
   </head>
   <body>
-    <div id="app">
-    </div>
+    <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
