--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html class="mdc-typography">
   <head>
     <meta charset="utf-8">
     <title>Kristoffer Darj portfolio</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,300" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body class="body">
     <div id="app"></div>
-    <!-- built files will be auto injected -->
   </body>
 </html>
