--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Kristoffer Darj portfolio</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   </head>
   <body class="body mdc-typography">
     <div id="app"></div>
